--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
         <header>
             <nav class="menu">
-                <h1><a class="menu__h1" href="./mainpage.html">Terénní seminář</a></h1>
+                <h1><a class="menu__h1" href="./index.html">Terénní seminář</a></h1>
                 <ul class="menu__odrazky">
                     <li><a class="menu__item" href="./bestof.html">Best of</a></li>
                     <li><a class="menu__item" href="./scena.html">Scéna</a></li>
